...
あくまでエンターテイメントとしてご利用ください。
ご理解のほどよろしくお願いいたします。

また、利用規約とプライバシーポリシーもご確認ください。
""";
// text
const String tosText = "利用規約";
const String privacyPolicyText = "プライバシーポリシー";
const String agreeText = "上記の内容、利用規約、プライバシーポリシーに同意する";

const String okText = "OK";
const String cancelText = "キャンセル";
// initialName
const noName = "名無し";

