...
                    color: Colors.white,
                    size: 20,
                  ),
                ),
              const SizedBox(height: 16),
              RoundedButton(
                text: 'メールアドレスで続ける',
                textColor: Colors.white,
                buttonColor: const Color(0xFF6C63FF),
                press: () {
                  RouteUtil.pushPath(context, EmailAuthPage.path);
                },
                icon: const Icon(
...
